thelounge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thelounge
  namespace: irc
spec:
  parentRefs:
    - name: external
      namespace: gateway-system
  hostnames:
    - ${THELOUNGE_HOSTNAME}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: thelounge
          port: 9000
